# cpp_miltech

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: json.hpp.79CC81438D4938F5.idx  main.cpp.D3C627C0199397E8.idx
homework_03/: json.hpp  main.cpp
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/include/: telemetry.hpp
homework_05/src/: telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: Read_Input.cpp  ballistics.cpp  main.cpp
homework_06/tests/: Correct_values_test.cpp  ballistics_tests.cpp
homework_07/: CMakeLists.txt
homework_07/data/: config.json
homework_07/include/: Factory.h  ammo.hpp  ballistics.hpp  config.hpp  target.hpp
homework_07/include/interfaces/: IBallisticSolver.h  IConfigLoader.h  ITargetProvider.h
homework_07/include/loaders/: FileConfigLoader.h
homework_07/include/mission/: MissionProcessor.h
homework_07/include/providers/: JsonTargetProvider.h
homework_07/include/solvers/: AnalyticalSolver.h
homework_07/src/: AnalyticalSolver.cpp  Factory.cpp  FileConfigLoader.cpp  JsonTargetProvider.cpp  MissionProcessor.cpp  ballistics.cpp  main.cpp
scripts/: check_quality.sh
